Remove RX, change api. (#21)
* migrate to imperativ

* merge api branch

* Some fixes.

Co-authored-by: Stephan Schnabel <spampot+github@posteo.eu>