@@ -1,5 +1,6 @@
 package io.kokuwa.fleet.registry.rest.management;
 
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
@@ -12,6 +13,7 @@ import io.kokuwa.fleet.registry.domain.Gateway;
 import io.kokuwa.fleet.registry.domain.GatewayGroup;
 import io.kokuwa.fleet.registry.domain.GatewayGroup.GatewayGroupPK;
 import io.kokuwa.fleet.registry.domain.GatewayGroupRepository;
+import io.kokuwa.fleet.registry.domain.GatewayProperty;
 import io.kokuwa.fleet.registry.domain.GatewayPropertyRepository;
 import io.kokuwa.fleet.registry.domain.GatewayRepository;
 import io.kokuwa.fleet.registry.domain.Group;
@@ -23,9 +25,6 @@ import io.micronaut.http.HttpResponse;
 import io.micronaut.http.HttpStatus;
 import io.micronaut.http.annotation.Controller;
 import io.micronaut.http.exceptions.HttpStatusException;
-import io.reactivex.Completable;
-import io.reactivex.Flowable;
-import io.reactivex.Single;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 
@@ -47,204 +46,176 @@ public class GatewayController implements GatewayApi {
 	private final GatewayPropertyRepository gatewayPropertyRepository;
 
 	@Override
-	public Single<HttpResponse<List<GatewayVO>>> getGateways(Optional<UUID> tenantId, Optional<UUID> group) {
-		return tenantId
-				.map(gatewayRepository::findByTenantExternalIdOrderByName)
-				.orElseGet(gatewayRepository::findAllOrderByName)
-				.map(mapper::toGateway).toList().map(HttpResponse::ok);
+	public HttpResponse<List<GatewayVO>> getGateways(UUID tenantId, Optional<UUID> groupId) {
+		List<Gateway> gateways;
+		Optional<Tenant> optionalTenant = tenantRepository.findByTenantId(tenantId);
+		if (optionalTenant.isPresent()) {
+			gateways = gatewayRepository.findByTenantOrderByName(optionalTenant.get());
+		} else {
+			throw new HttpStatusException(HttpStatus.NOT_FOUND, "Gateway not found.");
+		}
+		return HttpResponse.ok(gateways.stream().map(mapper::toGateway).collect(Collectors.toList()));
 	}
 
 	@Override
-	public Single<HttpResponse<GatewayDetailVO>> getGateway(UUID gatewayId) {
-		return gatewayRepository.findByExternalId(gatewayId)
-				.doOnComplete(() -> {
-					log.trace("Gateway not found.");
-					throw new HttpStatusException(HttpStatus.NOT_FOUND, "Gateway not found.");
-				})
-				.toSingle().flatMap(this::toGatewayDetail).map(HttpResponse::ok);
+	public HttpResponse<GatewayDetailVO> getGateway(UUID tenantId, UUID gatewayId) {
+		var optionalGateway = gatewayRepository.findByTenantTenantIdAndGatewayId(tenantId, gatewayId);
+		if (optionalGateway.isEmpty()) {
+			log.trace("Gateway not found.");
+			throw new HttpStatusException(HttpStatus.NOT_FOUND, "Gateway not found.");
+		}
+		return HttpResponse.ok(toGatewayDetail(optionalGateway.get()));
 	}
 
 	@Override
-	public Single<HttpResponse<GatewayDetailVO>> createGateway(GatewayCreateVO vo) {
+	public HttpResponse<GatewayDetailVO> createGateway(UUID tenantId, GatewayCreateVO vo) {
 
 		// get tenant
 
-		var tenantSingle = tenantRepository.findByExternalId(vo.getTenantId())
-				.doOnComplete(() -> {
-					log.trace("Tenant not found.");
-					throw new HttpStatusException(HttpStatus.BAD_REQUEST, "Tenant not found.");
-				})
-				.toSingle();
+		var optionalTenant = tenantRepository.findByTenantId(tenantId);
+		if (optionalTenant.isEmpty()) {
+			log.trace("Tenant not found.");
+			throw new HttpStatusException(HttpStatus.NOT_FOUND, "Tenant not found.");
+		}
 
 		// check name for uniqueness
 
-		tenantSingle = tenantSingle.flatMap(tenant -> gatewayRepository.existsByTenantAndName(tenant, vo.getName())
-				.flatMap(exists -> {
-					if (exists) {
-						throw new HttpStatusException(HttpStatus.CONFLICT, "Already exists.");
-					}
-					return Single.just(tenant);
-				}));
+		Boolean existsByTenantAndName = gatewayRepository.existsByTenantAndName(optionalTenant.get(), vo.getName());
+		if (existsByTenantAndName) {
+			throw new HttpStatusException(HttpStatus.CONFLICT, "Already exists.");
+		}
 
 		// check groups for existence
 
 		var groupIds = Optional.ofNullable(vo.getGroupIds()).map(Set::copyOf).orElseGet(Set::of);
-		var groupsSingle = groupIds.isEmpty()
-				? Single.just(List.<Group>of())
-				: tenantSingle.flatMap(tenant -> getGroups(tenant, groupIds));
+		var groups = groupIds.isEmpty() ? List.<Group>of() : getGroups(optionalTenant.get(), groupIds);
 
 		// create gateway
 
-		var gatewaySingle = Single
-				.zip(tenantSingle, groupsSingle, (tenant, groups) -> new Gateway()
-						.setTenant(tenant)
-						.setName(vo.getName())
-						.setEnabled(vo.getEnabled())
-						.setGroups(groups))
-				.flatMap(gatewayRepository::save)
-				.doOnSuccess(gateway -> log.info("Created gateway: {}", gateway));
+		var gateway = new Gateway().setGatewayId(UUID.randomUUID()).setTenant(optionalTenant.get())
+				.setName(vo.getName()).setEnabled(vo.getEnabled()).setGroups(groups);
+
+		gateway = gatewayRepository.save(gateway);
 
 		// create group assignments
 
 		if (!groupIds.isEmpty()) {
-			gatewaySingle = gatewaySingle.flatMap(gateway -> gatewayGroupRepository
-					.saveAll(gateway.getGroups().stream()
-							.map(group -> new GatewayGroup().setPk(new GatewayGroupPK(gateway, group)))
-							.collect(Collectors.toSet()))
-					.ignoreElements()
-					.toSingleDefault(gateway));
+			Gateway finalGateway = gateway;
+			gatewayGroupRepository.saveAll(gateway.getGroups().stream()
+					.map(group -> new GatewayGroup().setPk(new GatewayGroupPK(finalGateway, group)))
+					.collect(Collectors.toSet()));
 		}
 
 		// return
-
-		return gatewaySingle.map(mapper::toGatewayDetail).map(HttpResponse::created);
+		return HttpResponse.created(mapper.toGatewayDetail(gateway));
 	}
 
 	@Override
-	public Single<HttpResponse<GatewayDetailVO>> updateGateway(UUID gatewayId, GatewayUpdateVO vo) {
+	public HttpResponse<GatewayDetailVO> updateGateway(UUID tenantId, UUID gatewayId, GatewayUpdateVO vo) {
 
 		// get tenant from database
 
 		var changed = new AtomicBoolean(false);
-		var gatewaySingle = gatewayRepository.findByExternalId(gatewayId)
-				.doOnComplete(() -> {
-					log.trace("Skip update of non existing gateway.");
-					throw new HttpStatusException(HttpStatus.NOT_FOUND, "Gateway not found.");
-				})
-				.toSingle();
+		var optionalGateway = gatewayRepository.findByTenantTenantIdAndGatewayId(tenantId, gatewayId);
+
+		if (optionalGateway.isEmpty()) {
+			log.trace("Skip update of non existing gateway.");
+			throw new HttpStatusException(HttpStatus.NOT_FOUND, "Gateway not found.");
+		}
 
 		// update fields
 
+		var gateway = optionalGateway.get();
 		if (vo.getName() != null) {
-			gatewaySingle = gatewaySingle.flatMap(gateway -> {
-				if (gateway.getName().equals(vo.getName())) {
-					log.trace("Gateway {}: skip update of name because not changed.", gateway.getName());
-					return Single.just(gateway);
-				} else {
-					return gatewayRepository.existsByTenantAndName(gateway.getTenant(), vo.getName())
-							.flatMap(exists -> {
-								if (exists) {
-									throw new HttpStatusException(HttpStatus.CONFLICT, "Already exists.");
-								}
-								log.info("Tenant {}: updated name to {}.", gateway.getName(), vo.getName());
-								changed.set(true);
-								return Single.just(gateway.setName(vo.getName()));
-							});
+			if (gateway.getName().equals(vo.getName())) {
+				log.trace("Gateway {}: skip update of name because not changed.", gateway.getName());
+			} else {
+				Boolean existsByTenantAndName = gatewayRepository.existsByTenantAndName(gateway.getTenant(),
+						vo.getName());
+
+				if (existsByTenantAndName) {
+					throw new HttpStatusException(HttpStatus.CONFLICT, "Already exists.");
 				}
-			});
+				log.info("Tenant {}: updated name to {}.", gateway.getName(), vo.getName());
+				changed.set(true);
+				gateway.setName(vo.getName());
+			}
 		}
 		if (vo.getEnabled() != null) {
-			gatewaySingle = gatewaySingle.flatMap(gateway -> {
-				if (gateway.getEnabled() == vo.getEnabled()) {
-					log.trace("Skip update of enabled {} because not changed.", gateway.getEnabled());
-					return Single.just(gateway);
-				} else {
-					log.info("Gateway {}: updated enabled to {}.", gateway.getName(), vo.getEnabled());
-					changed.set(true);
-					return Single.just(gateway.setEnabled(vo.getEnabled()));
-				}
-			});
+			if (gateway.getEnabled() == vo.getEnabled()) {
+				log.trace("Skip update of enabled {} because not changed.", gateway.getEnabled());
+			} else {
+				log.info("Gateway {}: updated enabled to {}.", gateway.getName(), vo.getEnabled());
+				changed.set(true);
+				gateway.setEnabled(vo.getEnabled());
+			}
 		}
 		if (vo.getGroupIds() != null) {
-			var oldGroupsSingle = gatewaySingle
-					.flatMap(gateway -> gatewayGroupRepository.findGroupsByGatewayId(gateway.getId()).toList());
-			var newGroupsSingle = gatewaySingle
-					.flatMap(gateway -> getGroups(gateway.getTenant(), vo.getGroupIds()));
-			gatewaySingle = Single.zip(gatewaySingle, oldGroupsSingle, newGroupsSingle,
-					(gateway, oldGroups, newGroups) -> {
+			var oldGroups = gatewayGroupRepository.findGroupsByGatewayId(gateway.getId());
+			var newGroups = getGroups(gateway.getTenant(), vo.getGroupIds());
 
-						var oldGroupIds = oldGroups.stream().map(Group::getExternalId).collect(Collectors.toSet());
-						var newGroupIds = vo.getGroupIds();
+			var oldGroupIds = oldGroups.stream().map(Group::getGroupId).collect(Collectors.toSet());
+			var newGroupIds = vo.getGroupIds();
 
-						// remove group
+			// remove group
 
-						var removedGroups = oldGroups.stream()
-								.filter(oldGroup -> !newGroupIds.contains(oldGroup.getExternalId()))
-								.map(oldGroup -> new GatewayGroupPK(gateway, oldGroup))
-								.collect(Collectors.toSet());
-						var removeCompletable = Completable.concat(removedGroups.stream()
-								.map(gatewayGroupRepository::deleteById)
-								.collect(Collectors.toSet()));
+			Gateway finalGateway = gateway;
+			var removedGroups = oldGroups.stream().filter(oldGroup -> !newGroupIds.contains(oldGroup.getGroupId()))
+					.map(oldGroup -> new GatewayGroupPK(finalGateway, oldGroup)).collect(Collectors.toSet());
+			removedGroups.forEach(gatewayGroupRepository::deleteById);
 
-						// add group
+			// add group
 
-						var addedGroups = newGroups.stream()
-								.filter(newGroup -> !oldGroupIds.contains(newGroup.getExternalId()))
-								.map(newGroup -> new GatewayGroup().setPk(new GatewayGroupPK(gateway, newGroup)))
-								.collect(Collectors.toSet());
-						var addCompletable = addedGroups.isEmpty()
-								? Completable.complete()
-								: gatewayGroupRepository.saveAll(addedGroups).ignoreElements();
+			var addedGroups = newGroups.stream().filter(newGroup -> !oldGroupIds.contains(newGroup.getGroupId()))
+					.map(newGroup -> new GatewayGroup().setPk(new GatewayGroupPK(finalGateway, newGroup)))
+					.collect(Collectors.toSet());
+			if (!addedGroups.isEmpty()) {
+				gatewayGroupRepository.saveAll(addedGroups);
+			}
 
-						changed.set(!addedGroups.isEmpty() || !removedGroups.isEmpty());
-						return removeCompletable.andThen(addCompletable).toSingleDefault(gateway);
-					}).flatMap(s -> s);
+			changed.set(!addedGroups.isEmpty() || !removedGroups.isEmpty());
 		}
 
 		// return updated
-
-		return gatewaySingle
-				.flatMap(gateway -> changed.get() ? gatewayRepository.update(gateway) : Single.just(gateway))
-				.flatMap(this::toGatewayDetail)
-				.map(HttpResponse::ok);
+		if (changed.get()) {
+			gateway = gatewayRepository.update(gateway);
+		}
+		return HttpResponse.ok(toGatewayDetail(gateway));
 	}
 
 	@Override
-	public Single<HttpResponse<Object>> deleteGateway(UUID gatewayId) {
-		return gatewayRepository.findByExternalId(gatewayId)
-				.doOnComplete(() -> {
-					log.trace("Skip deletion of non existing gateway.");
-					throw new HttpStatusException(HttpStatus.NOT_FOUND, "Gateway not found.");
-				})
-				.flatMapSingle(gateway -> gatewayRepository.delete(gateway).toSingle(() -> {
-					log.info("Gateway {} deleted.", gateway.getName());
-					return HttpResponse.noContent();
-				}));
+	public HttpResponse<Object> deleteGateway(UUID tenantId, UUID gatewayId) {
+		var optionalGateway = gatewayRepository.findByTenantTenantIdAndGatewayId(tenantId, gatewayId);
+		if (optionalGateway.isEmpty()) {
+			log.trace("Skip deletion of non existing gateway.");
+			throw new HttpStatusException(HttpStatus.NOT_FOUND, "Gateway not found.");
+		}
+		gatewayRepository.delete(optionalGateway.get());
+		log.info("Gateway {} deleted.", optionalGateway.get().getName());
+		return HttpResponse.noContent();
 	}
 
-	private Single<List<Group>> getGroups(Tenant tenant, Set<UUID> groupIds) {
-		return Flowable.fromIterable(groupIds).flatMapSingle(groupId -> groupRepository.findByExternalId(groupId)
-				.doOnComplete(() -> {
-					log.trace("Group " + groupId + " not found.");
-					throw new HttpStatusException(HttpStatus.BAD_REQUEST, "Group " + groupId + " not found.");
-				})
-				.doOnSuccess(group -> {
-					if (!Objects.equals(tenant.getExternalId(), group.getTenant().getExternalId())) {
-						throw new HttpStatusException(HttpStatus.BAD_REQUEST, "Group " + groupId + " not found.");
-					}
-				}).toSingle()).toList();
+	private List<Group> getGroups(Tenant tenant, Set<UUID> groupIds) {
+
+		var result = new ArrayList<Group>();
+		for (var groupId : groupIds) {
+			Optional<Group> optionalGroup = groupRepository.findByTenantAndGroupId(tenant, groupId);
+			if (optionalGroup.isEmpty()) {
+				throw new HttpStatusException(HttpStatus.BAD_REQUEST, "Group " + groupId + " not found.");
+			}
+			if (!Objects.equals(tenant.getTenantId(), optionalGroup.get().getTenant().getTenantId())) {
+				throw new HttpStatusException(HttpStatus.BAD_REQUEST, "Group " + groupId + " not found.");
+			}
+			result.add(optionalGroup.get());
+		}
+		return result;
 	}
 
-	private Single<GatewayDetailVO> toGatewayDetail(Gateway gateway) {
-		return Completable
-				.mergeArray(
-						gatewayPropertyRepository
-								.findByGatewayId(gateway.getId())
-								.toList().map(gateway::setProperties).ignoreElement(),
-						gatewayGroupRepository
-								.findGroupsByGatewayId(gateway.getId())
-								.toList().map(gateway::setGroups).ignoreElement())
-				.toSingleDefault(gateway)
-				.map(mapper::toGatewayDetail);
+	private GatewayDetailVO toGatewayDetail(Gateway gateway) {
+		List<GatewayProperty> gatewayProperties = gatewayPropertyRepository.findByGatewayId(gateway.getId());
+		gateway.setProperties(gatewayProperties);
+		List<Group> gatewayGroups = gatewayGroupRepository.findGroupsByGatewayId(gateway.getId());
+		gateway.setGroups(gatewayGroups);
+		return mapper.toGatewayDetail(gateway);
 	}
 }
