@@ -1,7 +1,9 @@
 package io.kokuwa.fleet.registry.rest.management;
 
 import java.util.List;
+import java.util.Optional;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 import io.kokuwa.fleet.registry.domain.Gateway;
 import io.kokuwa.fleet.registry.domain.GatewayRepository;
@@ -12,7 +14,6 @@ import io.micronaut.http.HttpResponse;
 import io.micronaut.http.HttpStatus;
 import io.micronaut.http.annotation.Controller;
 import io.micronaut.http.exceptions.HttpStatusException;
-import io.reactivex.Single;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 
@@ -31,93 +32,82 @@ public class SecretController implements SecretApi {
 	private final SecretRepository secretRepository;
 
 	@Override
-	public Single<HttpResponse<List<SecretVO>>> getSecrets(UUID gatewayId) {
-		return toGateway(gatewayId)
-				.flatMapPublisher(gateway -> secretRepository
-						.findByGatewayOrderByName(gateway)
-						.map(secret -> secret.setGateway(gateway)))
-				.map(mapper::toSecret).toList().map(HttpResponse::ok);
+	public HttpResponse<List<SecretVO>> getSecrets(UUID gatewayId) {
+		Gateway gateway = toGateway(gatewayId);
+		List<Secret> secrets = secretRepository.findByGatewayOrderByName(gateway);
+		secrets.forEach(s -> s.setGateway(gateway));
+		return HttpResponse.ok(secrets.stream().map(mapper::toSecret).collect(Collectors.toList()));
 	}
 
 	@Override
-	public Single<HttpResponse<SecretDetailVO>> getSecret(UUID gatewayId, UUID secretId) {
-		return toGateway(gatewayId)
-				.flatMapMaybe(gateway -> secretRepository
-						.findByGatewayAndExternalId(gateway, secretId)
-						.map(secret -> secret.setGateway(gateway)))
-				.doOnComplete(() -> {
-					log.trace("Secret not found.");
-					throw new HttpStatusException(HttpStatus.NOT_FOUND, "Secret not found.");
-				})
-				.toSingle().map(mapper::toSecretDetail).map(HttpResponse::ok);
+	public HttpResponse<SecretDetailVO> getSecret(UUID gatewayId, UUID secretId) {
+		Gateway gateway = toGateway(gatewayId);
+		Optional<Secret> optionalSecret = secretRepository.findByGatewayAndSecretId(gateway, secretId);
+		if (optionalSecret.isEmpty()) {
+			log.trace("Secret not found.");
+			throw new HttpStatusException(HttpStatus.NOT_FOUND, "Secret not found.");
+		}
+		optionalSecret.get().setGateway(gateway);
+		return HttpResponse.ok(mapper.toSecretDetail(optionalSecret.get()));
 	}
 
 	@Override
-	public Single<HttpResponse<SecretDetailVO>> createSecret(UUID gatewayId, SecretCreateVO vo) {
+	public HttpResponse<SecretDetailVO> createSecret(UUID gatewayId, SecretCreateVO vo) {
 
 		// get gateway
 
-		var gatewaySingle = toGateway(gatewayId);
+		var gateway = toGateway(gatewayId);
 
 		// check name for uniqueness
+		Boolean existsByGatewayAndName = secretRepository.existsByGatewayAndName(gateway, vo.getName());
 
-		gatewaySingle = gatewaySingle.flatMap(gateway -> secretRepository.existsByGatewayAndName(gateway, vo.getName())
-				.flatMap(exists -> {
-					if (exists) {
-						throw new HttpStatusException(HttpStatus.CONFLICT, "Already exists.");
-					}
-					return Single.just(gateway);
-				}));
+		if (existsByGatewayAndName) {
+			throw new HttpStatusException(HttpStatus.CONFLICT, "Already exists.");
+		}
 
 		// create secret
 
-		var entity = new Secret()
-				.setEnabled(vo.getEnabled())
-				.setName(vo.getName())
+		var entity = new Secret().setSecretId(UUID.randomUUID()).setEnabled(vo.getEnabled()).setName(vo.getName())
 				.setType(vo.getType());
 		switch (vo.getType()) {
-			case RSA:
+			case RSA :
 				var rsa = (SecretCreateRSAVO) vo;
 				entity.setPublicKey(rsa.getPublicKey());
 				entity.setPrivateKey(rsa.getPrivateKey());
 				break;
-			case HMAC:
+			case HMAC :
 				var hmac = (SecretCreateHmacVO) vo;
 				entity.setHmac(hmac.getHmac());
 				break;
-			default:
+			default :
 				break;
 		}
-		var secretSingle = gatewaySingle
-				.map(entity::setGateway)
-				.flatMap(secretRepository::save)
-				.doOnSuccess(secret -> log.info("Created secret: {}", secret));
+		entity.setGateway(gateway);
+		var secret = secretRepository.save(entity);
+		log.info("Created secret: {}", secret);
 
 		// return
-
-		return secretSingle.map(mapper::toSecretDetail).map(HttpResponse::created);
+		return HttpResponse.created(mapper.toSecretDetail(secret));
 	}
 
 	@Override
-	public Single<HttpResponse<Object>> deleteSecret(UUID gatewayId, UUID secretId) {
-		return toGateway(gatewayId)
-				.flatMapMaybe(gateway -> secretRepository.findByGatewayAndExternalId(gateway, secretId))
-				.doOnComplete(() -> {
-					log.trace("Skip deletion of non existing secret.");
-					throw new HttpStatusException(HttpStatus.NOT_FOUND, "Secret not found.");
-				})
-				.flatMapSingle(secret -> secretRepository.delete(secret).toSingle(() -> {
-					log.info("Secret {} deleted.", secret.getName());
-					return HttpResponse.noContent();
-				}));
+	public HttpResponse<Object> deleteSecret(UUID gatewayId, UUID secretId) {
+		Optional<Secret> optionalSecret = secretRepository.findByGatewayAndSecretId(toGateway(gatewayId), secretId);
+		if (optionalSecret.isEmpty()) {
+			log.trace("Skip deletion of non existing secret.");
+			throw new HttpStatusException(HttpStatus.NOT_FOUND, "Secret not found.");
+		}
+		secretRepository.delete(optionalSecret.get());
+		log.info("Secret {} deleted.", optionalSecret.get().getName());
+		return HttpResponse.noContent();
 	}
 
-	private Single<Gateway> toGateway(UUID gatewayId) {
-		return gatewayRepository.findByExternalId(gatewayId)
-				.doOnComplete(() -> {
-					log.trace("Gateway not found.");
-					throw new HttpStatusException(HttpStatus.NOT_FOUND, "Gateway not found.");
-				})
-				.toSingle();
+	private Gateway toGateway(UUID gatewayId) {
+		Optional<Gateway> optionalGateway = gatewayRepository.findByGatewayId(gatewayId);
+		if (optionalGateway.isEmpty()) {
+			log.trace("Gateway not found.");
+			throw new HttpStatusException(HttpStatus.NOT_FOUND, "Gateway not found.");
+		}
+		return optionalGateway.get();
 	}
 }
